# pokedex-takehome

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTES.md  Poketracker.postman_collection.json  README.md  alembic.ini  docker-compose.yml  prompt.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1a18e259c72c_add_pokemon_habitat.py  3f1e2d4c5b6a_make_email_normalized_unique.py  4235c1ee08ed_remove_pokemon_habitat.py  6a4f91b2c3d4_add_region_constraints_and_summary_indexes.py  7a60741dc732_unified_user_model.py  8c5a5382b805_initial_schema.py  970f2f7f9d0b_add_sightings_filter_indexes.py  9d2b8a6fb1c4_add_domain_check_constraints.py  b6f7c8d9e0f1_add_sighting_confirmation_metadata.py  c4d8b6a92f10_add_research_campaigns.py
app/: __init__.py  auth.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  time.py
app/domain/: campaigns.py  regions.py  sightings.py  users.py
app/repositories/: __init__.py  campaigns.py  errors.py  regions.py  sightings.py
app/routers/: campaigns.py  pokedex.py  rangers.py  regions.py  sightings.py  trainers.py  users.py
app/services/: campaigns.py  regions.py  sightings.py  users.py
scripts/: seed.py
tests/: conftest.py  test_campaigns.py  test_candidate.py  test_domain_entities.py  test_drift_guards.py  test_pokedex.py  test_public.py  test_rangers.py  test_seed_script.py  test_sightings.py  test_trainers.py  test_users.py
tests/domain/: conftest.py
tests/models/: test_campaign_constraints.py  test_region_constraints.py  test_sighting_confirmation_constraints.py
(+19 files in other folders)
